[gd_scene load_steps=33 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://tilesets/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://scripts/character.gd" type="Script" id=3]
[ext_resource path="res://assets/Personagem/p1_walk01.png" type="Texture" id=4]
[ext_resource path="res://assets/Personagem/p1_walk02.png" type="Texture" id=5]
[ext_resource path="res://assets/Personagem/p1_walk03.png" type="Texture" id=6]
[ext_resource path="res://assets/Personagem/p1_walk04.png" type="Texture" id=7]
[ext_resource path="res://assets/Personagem/p1_walk05.png" type="Texture" id=8]
[ext_resource path="res://assets/Personagem/p1_walk06.png" type="Texture" id=9]
[ext_resource path="res://assets/Personagem/p1_walk07.png" type="Texture" id=10]
[ext_resource path="res://assets/Tiles/cloud3.png" type="Texture" id=11]
[ext_resource path="res://scenes/Coin.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/Block.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/Platform.tscn" type="PackedScene" id=15]
[ext_resource path="res://assets/Botoes/esquerda0.png" type="Texture" id=16]
[ext_resource path="res://assets/Botoes/esquerda1.png" type="Texture" id=17]
[ext_resource path="res://assets/Botoes/direita0.png" type="Texture" id=18]
[ext_resource path="res://assets/Botoes/direita1.png" type="Texture" id=19]
[ext_resource path="res://assets/Botoes/cima0.png" type="Texture" id=20]
[ext_resource path="res://assets/Botoes/cima1.png" type="Texture" id=21]
[ext_resource path="res://assets/coin48.png" type="Texture" id=22]
[ext_resource path="res://fonts/font100.fnt" type="BitmapFont" id=23]
[ext_resource path="res://assets/hud_heartFull.png" type="Texture" id=24]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 28.7774, 59.3764 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 21.1979, 0.245453 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 29.1999, 64.8817 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 23.5273, 0.745148 )

[sub_resource type="Curve2D" id=6]

bake_interval = 5.0
_data = {
"points": Vector2Array( 0, 0, 0, 0, 296.07, -6.82829, 0, 0, 0, 0, -62.3714, -5.85295 )
}

[sub_resource type="StyleBoxFlat" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.270264, 0.84375, 0.306107, 1 )
dark_color = Color( 0.266667, 0.843137, 0.305882, 1 )
border_size = 10
border_blend = false
draw_bg = false

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 16.7864, 302.398 )

[node name="Game" type="Node"]

script/script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 2
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 327679, 3, 393215, 3, 327694, 1, 327695, 0, 327696, 0, 327697, 2, 458751, 3, 524287, 3, 458776, 7, 458805, 6, 589823, 3, 524288, 0, 524289, 0, 524290, 0, 524291, 0, 524292, 0, 524293, 0, 524294, 0, 524295, 0, 524296, 0, 524297, 0, 524298, 0, 524299, 0, 524300, 0, 524301, 0, 524302, 0, 524303, 0, 524304, 0, 524305, 0, 524306, 2, 524307, 4, 524308, 4, 524309, 4, 524310, 4, 524311, 1, 524312, 0, 524313, 0, 524314, 0, 524315, 2, 524330, 1, 524331, 2, 524332, 0, 524333, 0, 524334, 2, 524335, 4, 524336, 4, 524337, 4, 524338, 4, 524339, 1, 524340, 0, 524341, 0, 524342, 0, 524343, 0, 524344, 0, 524345, 0, 524346, 0, 524347, 0, 524348, 0, 524349, 0, 524350, 2, 655359, 3, 589824, 3, 589825, 3, 589826, 3, 589827, 3, 589828, 3, 589829, 3, 589830, 3, 589831, 3, 589832, 3, 589833, 3, 589834, 3, 589835, 3, 589836, 3, 589837, 3, 589838, 3, 589839, 3, 589840, 3, 589841, 3, 589842, 3, 589843, 5, 589844, 5, 589845, 5, 589846, 5, 589847, 3, 589848, 3, 589849, 3, 589850, 3, 589851, 3, 589866, 3, 589867, 3, 589868, 3, 589869, 3, 589870, 3, 589871, 5, 589872, 5, 589873, 5, 589874, 5, 589875, 3, 589876, 3, 589877, 3, 589878, 3, 589879, 3, 589880, 3, 589881, 3, 589882, 3, 589883, 3, 589884, 3, 589885, 3, 589886, 3, 720895, 3, 655360, 3, 655361, 3, 655362, 3, 655363, 3, 655364, 3, 655365, 3, 655366, 3, 655367, 3, 655368, 3, 655369, 3, 655370, 3, 655371, 3, 655372, 3, 655373, 3, 655374, 3, 655375, 3, 655376, 3, 655377, 3, 655378, 3, 655379, 5, 655380, 5, 655381, 5, 655382, 5, 655383, 3, 655384, 3, 655385, 3, 655386, 3, 655387, 3, 655402, 3, 655403, 3, 655404, 3, 655405, 3, 655406, 3, 655407, 5, 655408, 5, 655409, 5, 655410, 5, 655411, 3, 655412, 3, 655413, 3, 655414, 3, 655415, 3, 655416, 3, 655417, 3, 655418, 3, 655419, 3, 655420, 3, 655421, 3, 655422, 3, 786431, 3, 720896, 3, 720897, 3, 720898, 3, 720899, 3, 720900, 3, 720901, 3, 720902, 3, 720903, 3, 720904, 3, 720905, 3, 720906, 3, 720907, 3, 720908, 3, 720909, 3, 720910, 3, 720911, 3, 720912, 3, 720913, 3, 720914, 3, 720915, 5, 720916, 5, 720917, 5, 720918, 5, 720919, 3, 720920, 3, 720921, 3, 720922, 3, 720923, 3, 720938, 3, 720939, 3, 720940, 3, 720941, 3, 720942, 3, 720943, 5, 720944, 5, 720945, 5, 720946, 5, 720947, 3, 720948, 3, 720949, 3, 720950, 3, 720951, 3, 720952, 3, 720953, 3, 720954, 3, 720955, 3, 720956, 3, 720957, 3, 720958, 3, 851967, 3, 786432, 3, 786433, 3, 786434, 3, 786435, 3, 786436, 3, 786437, 3, 786438, 3, 786439, 3, 786440, 3, 786441, 3, 786442, 3, 786443, 3, 786444, 3, 786445, 3, 786446, 3, 786447, 3, 786448, 3, 786449, 3, 786450, 3, 786451, 5, 786452, 5, 786453, 5, 786454, 5, 786455, 3, 786456, 3, 786457, 3, 786458, 3, 786459, 3, 786474, 3, 786475, 3, 786476, 3, 786477, 3, 786478, 3, 786479, 5, 786480, 5, 786481, 5, 786482, 5, 786483, 3, 786484, 3, 786485, 3, 786486, 3, 786487, 3, 786488, 3, 786489, 3, 786490, 3, 786491, 3, 786492, 3, 786493, 3, 786494, 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Character" type="KinematicBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 234.772, 408.942 )
z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 2
collision/margin = 0.08
script/script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Character"]

transform/scale = Vector2( 1.3, 1.3 )
frames = SubResource( 2 )
animation = "default"
frame = 5

[node name="Shape" type="CollisionShape2D" parent="Character"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="RayLeft" type="RayCast2D" parent="Character"]

transform/pos = Vector2( -28.4561, 59.6049 )
enabled = true
cast_to = Vector2( 0, 5 )
layer_mask = 2
type_mask = 15

[node name="RayRight" type="RayCast2D" parent="Character"]

transform/pos = Vector2( 28.4348, 59.5035 )
enabled = true
cast_to = Vector2( 0, 5 )
layer_mask = 2
type_mask = 15

[node name="Camera2D" type="Camera2D" parent="Character"]

transform/pos = Vector2( 5, 0 )
offset = Vector2( 5, 0 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = -10000000
limit/right = 10000000
limit/bottom = 800
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="Foot" type="Area2D" parent="Character"]

editor/display_folded = true
transform/pos = Vector2( -599.77, -441.751 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 599.619, 503.193 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 1024
collision/mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/Foot"]

transform/pos = Vector2( 599.619, 503.193 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="Body" type="Area2D" parent="Character"]

editor/display_folded = true
transform/pos = Vector2( -0.527039, -0.552246 )
transform/scale = Vector2( 1, 0.852558 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 0.900375, 0.627625, 0.325775 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 1024
collision/mask = 8192

[node name="Shape" type="CollisionShape2D" parent="Character/Body"]

transform/pos = Vector2( 0.627625, 0.325775 )
transform/scale = Vector2( 1, 0.900375 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="Head" type="Area2D" parent="Character"]

editor/display_folded = true
transform/pos = Vector2( 0, -0.142395 )
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.527039, -59.5557 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/Head"]

transform/pos = Vector2( 0.527039, -59.5557 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

editor/display_folded = true
motion/scale = Vector2( 0.5, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]

transform/pos = Vector2( 78.9271, 135.537 )
transform/scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 11 )

[node name="Sprite1" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]

transform/pos = Vector2( 372.768, -0.500885 )
transform/scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 11 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]

transform/pos = Vector2( 2792.53, -50.4867 )
transform/scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 11 )

[node name="Sprite5" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]

transform/pos = Vector2( 1706.48, 35.8524 )
transform/scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]

transform/pos = Vector2( 1083.46, 133.327 )
transform/scale = Vector2( 2, 1.3 )
texture = ExtResource( 11 )
flip_h = true

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]

transform/pos = Vector2( 2251.31, 6.09055 )
transform/scale = Vector2( 2, 1.3 )
texture = ExtResource( 11 )
flip_h = true

[node name="Coins" type="Node2D" parent="."]

editor/display_folded = true

[node name="Coin" parent="Coins" instance=ExtResource( 12 )]

transform/pos = Vector2( 830, 480 )

[node name="Coin1" parent="Coins" instance=ExtResource( 12 )]

transform/pos = Vector2( 760, 480 )

[node name="Coin2" parent="Coins" instance=ExtResource( 12 )]

transform/pos = Vector2( 1083.45, 290 )

[node name="Coin3" parent="Coins" instance=ExtResource( 12 )]

transform/pos = Vector2( 956.722, 290 )

[node name="Coin4" parent="Coins" instance=ExtResource( 12 )]

transform/pos = Vector2( 1633.52, 175.442 )

[node name="Enemys" type="Node2D" parent="."]

editor/display_folded = true

[node name="Path2D" parent="Enemys" instance=ExtResource( 13 )]

transform/pos = Vector2( 810.572, 493.34 )
curve = SubResource( 6 )

[node name="Death" type="Camera2D" parent="."]

offset = Vector2( 5, 0 )
anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = -10000000
limit/right = 10000000
limit/bottom = 800
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="Blocks" type="Node2D" parent="."]

editor/display_folded = true

[node name="Block" parent="Blocks" instance=ExtResource( 14 )]

transform/pos = Vector2( 1016.34, 100.925 )

[node name="Block1" parent="Blocks" instance=ExtResource( 14 )]

transform/pos = Vector2( 1600, 340 )

[node name="Block2" parent="Blocks" instance=ExtResource( 14 )]

transform/pos = Vector2( 1670, 340 )

[node name="Platforms" type="Node2D" parent="."]

editor/display_folded = true

[node name="Platform" parent="Platforms" instance=ExtResource( 15 )]

transform/pos = Vector2( 1835.84, 543.027 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Controls" type="Node2D" parent="CanvasLayer"]

editor/display_folded = true
transform/pos = Vector2( 0, 525 )

[node name="Left" type="TouchScreenButton" parent="CanvasLayer/Controls"]

transform/scale = Vector2( 3, 3 )
normal = ExtResource( 16 )
pressed = ExtResource( 17 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Right" type="TouchScreenButton" parent="CanvasLayer/Controls"]

transform/pos = Vector2( 150, 0 )
transform/scale = Vector2( 3, 3 )
normal = ExtResource( 18 )
pressed = ExtResource( 19 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Up" type="TouchScreenButton" parent="CanvasLayer/Controls"]

transform/pos = Vector2( 1160, 0 )
transform/scale = Vector2( 3, 3 )
normal = ExtResource( 20 )
pressed = ExtResource( 21 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Panel" type="Panel" parent="CanvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 100.0
custom_styles/panel = SubResource( 8 )

[node name="Coin" type="Sprite" parent="CanvasLayer/Panel"]

transform/pos = Vector2( 68.0002, 50.0002 )
texture = ExtResource( 22 )
hframes = 61

[node name="Label" type="Label" parent="CanvasLayer/Panel"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 109.0
margin/top = 14.0
margin/right = 252.0
margin/bottom = 187.0
custom_fonts/font = ExtResource( 23 )
custom_colors/font_color = Color( 0.266667, 0.843137, 0.305882, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureFrame" type="TextureFrame" parent="CanvasLayer/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1211.0
margin/top = 31.0
margin/right = 1264.0
margin/bottom = 76.0
texture = ExtResource( 24 )
stretch_mode = 0

[node name="TextureFrame1" type="TextureFrame" parent="CanvasLayer/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1155.0
margin/top = 29.0
margin/right = 1208.0
margin/bottom = 74.0
texture = ExtResource( 24 )
stretch_mode = 0

[node name="TextureFrame2" type="TextureFrame" parent="CanvasLayer/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1098.0
margin/top = 29.0
margin/right = 1151.0
margin/bottom = 74.0
texture = ExtResource( 24 )
stretch_mode = 0

[node name="Label 2" type="Label" parent="CanvasLayer/Panel"]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 78.0
margin/top = 1.0
margin/right = -102.0
margin/bottom = 108.0
custom_fonts/font = ExtResource( 23 )
custom_colors/font_color = Color( 0.266667, 0.843137, 0.305882, 1 )
text = "30"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Spawn_Point" type="Position2D" parent="."]

transform/pos = Vector2( 235.496, 405.856 )

[node name="Spawn_Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="End" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 222.549, -124.019 )
input/pickable = true
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 3202.89, 334.364 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="End"]

transform/pos = Vector2( 3202.89, 334.364 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="Game_Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[connection signal="coin" from="Character" to="." method="_on_Character_coin"]

[connection signal="dead" from="Character" to="." method="_on_Character_dead"]

[connection signal="end" from="Character" to="." method="_on_Character_end"]

[connection signal="body_enter" from="Character/Foot" to="Character" method="_on_Foot_body_enter"]

[connection signal="body_enter" from="Character/Body" to="Character" method="_on_Body_body_enter"]

[connection signal="body_enter" from="Character/Head" to="Character" method="_on_Head_body_enter"]

[connection signal="pressed" from="CanvasLayer/Controls/Left" to="Character" method="_on_Left_pressed"]

[connection signal="released" from="CanvasLayer/Controls/Left" to="Character" method="_on_Left_released"]

[connection signal="pressed" from="CanvasLayer/Controls/Right" to="Character" method="_on_Right_pressed"]

[connection signal="released" from="CanvasLayer/Controls/Right" to="Character" method="_on_Right_released"]

[connection signal="pressed" from="CanvasLayer/Controls/Up" to="Character" method="_on_Up_pressed"]

[connection signal="released" from="CanvasLayer/Controls/Up" to="Character" method="_on_Up_released"]

[connection signal="timeout" from="Spawn_Timer" to="." method="_on_Spawn_Timer_timeout"]

[connection signal="body_enter" from="End" to="Character" method="_on_End_body_enter"]

[connection signal="timeout" from="Game_Timer" to="." method="_on_Game_Timer_timeout"]


